doc: tag create; deleted_at can be null
