# docs/swagger.json
@@ -229,6 +229,74 @@
                 }
             }
         },
+        "/api/v1/tags": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "创建标签",
+                "parameters": [
+                    {
+                        "example": "通勤",
+                        "description": "金额（单位：分）",
+                        "name": "name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "example": "expenses",
+                        "description": "类型",
+                        "name": "kind",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "example": "😈",
+                        "description": "符号",
+                        "name": "sign",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.CreateTagResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/validation_codes": {
             "post": {
                 "consumes": [
@@ -306,6 +374,14 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "api.CreateTagResponse": {
+            "type": "object",
+            "properties": {
+                "resource": {
+                    "$ref": "#/definitions/queries.Tag"
                 }
             }
         },
@@ -387,6 +463,35 @@
                 "KindExpenses",
                 "KindInCome"
             ]
+        },
+        "queries.Tag": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "kind": {
+                    "$ref": "#/definitions/queries.Kind"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "sign": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
         },
         "queries.User": {
             "type": "object",
